# AndelaSkillsSeries_AI_ML

./: .gitignore  README.md  pyproject.toml  requirements.txt
Project1:CustomChatGPTApp/: .langchain.db  chat_history.json  custom_chatgpt_app.py  deep_dive_into_langchain_workshop.ipynb  langchain_embeddings_pinecone_workshop.ipynb  langchain_gemini_workshop.ipynb  pinecone_workshop.ipynb
Project1:CustomChatGPTApp/files/: churchill_speech.txt
Project1:CustomChatGPTApp/workshops/: custom_chatgpt_langchain_workshop.ipynb  langchain_embeddings_pinecone_workshop.ipynb  langchain_gemini_workshop.ipynb  pinecone_workshop.ipynb
Project1:CustomChatGPTApp/workshops/.ipynb_checkpoints/: custom_chatgpt_langchain_app-checkpoint.ipynb  deep_dive_into_langchain-checkpoint.ipynb  langchain_embeddings_pinecone_workshop-checkpoint.ipynb  langchain_gemini_workshop-checkpoint.ipynb
Project2: QA_PrivateDocs/: question_answering_on_private_docs_app.ipynb
Project3:BuildingQuestionAnsweringStreamlit/: chat_with_documents.py
Project4:SummarizingLangchainOpenAI/: project_summarization.ipynb
Project4:SummarizingLangchainOpenAI/.ipynb_checkpoints/: project_summarization-checkpoint.ipynb
Project4:SummarizingLangchainOpenAI/files/: sj.txt
Project5:CustomChatGPTLangchainStreamlit/: project_streamlit_custom_chatgpt.py
TeamProject/: resume_analyzer_with_embedding_based.py
workshops/: deep_dive_into_langchain_workshop.ipynb  pinecone_workshop.ipynb
workshops/.ipynb_checkpoints/: pinecone_workshop-checkpoint.ipynb
